--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/fontawesome.all.min.css" />
 		<link rel="stylesheet" href="css/main.css" />
 
-		<title>Bienvenido a mi portafolio :)</title>
+		<title>Contacto</title>
 	</head>
 
 	<body id="bg-img">
@@ -22,7 +22,7 @@
 					<div class="portrait"></div>
 				</div>
 				<ul class="menu-nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="./" class="nav-link">
 							Home
 						</a>
@@ -37,7 +37,7 @@
 							Mi trabajo
 						</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a href="contact.html" class="nav-link">
 							Contacto
 						</a>
@@ -46,33 +46,27 @@
 			</nav>
 		</header>
 
-		<main id="home">
-			<h1 class="lg-heading">
-				Uriel <span class="text-secondary">Aispuro</span>
-				<div class="anim-container">
-					<span id="animation"></span>
-				</div>
-			</h1>
-
+		<main id="contact">
+			<h1 class="lg-heading">Contacto</h1>
 			<h2 class="sm-heading">
-				Desarrollador & Creador digital
+				Puedes contactarme a través de...
 			</h2>
-			<div class="icons">
-				<a href="https://www.instagram.com/urielsanchez64/" target="_blank">
-					<i class="fab fa-instagram fa-2x"></i>
-				</a>
-				<a href="https://www.linkedin.com/in/urielaispuro64/" target="_blank">
-					<i class="fab fa-linkedin fa-2x"></i>
-				</a>
-				<a href="#!" target="_blank">
-					<i class="fab fa-facebook fa-2x"></i>
-				</a>
-				<a href="https://dribbble.com/urielphic" target="_blank">
-					<i class="fab fa-dribbble fa-2x"></i>
-				</a>
-				<a href="https://github.com/urielexis64" target="_blank">
-					<i class="fab fa-github fa-2x"></i>
-				</a>
+			<div class="social-media">
+				<div>
+					<i class="fab fa-email fa-2x"></i>
+					<span class="text-secondary">Correo: </span>
+					urielalexis64@gmail.com
+				</div>
+				<div>
+					<i class="fab fa-email fa-2x"></i>
+					<span class="text-secondary">WhatsApp: </span>
+					urielalexis64@gmail.com
+				</div>
+				<div>
+					<i class="fab fa-email fa-2x"></i>
+					<span class="text-secondary">Correo: </span>
+					urielalexis64@gmail.com
+				</div>
 			</div>
 		</main>
 
@@ -80,11 +74,6 @@
 			Copyright &copy; 2020
 		</footer>
 
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.8/lottie.min.js"
-			integrity="sha256-HlqBFI4b3mzFNE97JQcgI/uhJvHBI5czBqfVtEeA1Hg="
-			crossorigin="anonymous"
-		></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
