--- a/work.html
+++ b/work.html
@@ -179,6 +179,24 @@
 						><i class="fab fa-instagram"></i> Instagram</a
 					>
 				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/15.png" alt="14" />
+					</a>
+					<a href="#" class="btn-light"><i class="fas fa-eye"></i> Spyral Loop Animation #2</a>
+					<a href="https://www.instagram.com/p/CAW93N6h9rE/" target="_blank" class="btn-dark"
+						><i class="fab fa-instagram"></i> Instagram</a
+					>
+				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/16.png" alt="14" />
+					</a>
+					<a href="#" class="btn-light"><i class="fas fa-eye"></i> Sphere Slices</a>
+					<a href="https://www.instagram.com/p/CAwoEWUB3iA/" target="_blank" class="btn-dark"
+						><i class="fab fa-instagram"></i> Instagram</a
+					>
+				</div>
 			</div>
 		</main>
 
